Lowering number of configurations